force-app/main/default/objects/Internal_Placement__c/Internal_Placement__c.object-meta.xml
<CustomObject>
    <label>Internal Placement</label>
    <nameField>
        <label>Internal Placement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Internal Placement</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>