force-app/main/default/objects/Internal_Placement__c/fields/Bill_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Bill_Prefix__c</fullName>
    <label>Bill Prefix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>