force-app/main/default/objects/Internal_Placement__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Capitalized Software Development Costs</fullName>
            </value>
            <value>
                <fullName>Advertising &amp; marketing</fullName>
            </value>
            <value>
                <fullName>Legal &amp; accounting services</fullName>
            </value>
            <value>
                <fullName>Recruiting:Community</fullName>
            </value>
            <value>
                <fullName>Sales &amp; Business Development</fullName>
            </value>
            <value>
                <fullName>Product Support</fullName>
            </value>
            <value>
                <fullName>Product Development</fullName>
                <isActive>false</isActive>
                <label>Product Development</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>