force-app/main/default/objects/Internal_Placement__c/fields/Engagement_Duration_weeks__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Duration_weeks__c</fullName>
    <label>Engagement Duration (weeks)</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>