force-app/main/default/objects/Internal_Placement__c/fields/Engagement_End_Date_Formula__c.field-meta.xml
<CustomField>
    <fullName>Engagement_End_Date_Formula__c</fullName>
    <formula>Engagement_End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Engagement End Date</label>
    <type>Date</type>
</CustomField>