force-app/main/default/objects/Internal_Placement__c/fields/Engagement_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Start_Date__c</fullName>
    <label>Engagement Start Date</label>
    <type>Date</type>
</CustomField>