force-app/main/default/objects/Internal_Placement__c/fields/Hours_Week__c.field-meta.xml
<CustomField>
    <fullName>Hours_Week__c</fullName>
    <defaultValue>40</defaultValue>
    <label>Hours/Week</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>