force-app/main/default/objects/Internal_Placement__c/fields/Placement__c.field-meta.xml
<CustomField>
    <fullName>Placement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Placement</label>
    <referenceTo>Placement__c</referenceTo>
    <relationshipLabel>Internal Placement</relationshipLabel>
    <relationshipName>Internal_Placement</relationshipName>
    <type>Lookup</type>
</CustomField>