force-app/main/default/objects/Internal_Placement__c/fields/Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Sub_Category__c</fullName>
    <label>Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Platform Development</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Sales and Marketing</fullName>
            </value>
            <value>
                <fullName>Talent Operations</fullName>
            </value>
            <value>
                <fullName>Community</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>