force-app/main/default/objects/Internal_Placement__c/fields/Torc_User__c.field-meta.xml
<CustomField>
    <fullName>Torc_User__c</fullName>
    <label>Torc User</label>
    <referenceTo>Torc_User__c</referenceTo>
    <relationshipLabel>Internal Placement</relationshipLabel>
    <relationshipName>Internal_Placement</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>