force-app/main/default/objects/Internal_Placement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Engagement_Start_Date__c</columns>
    <columns>Engagement_End_Date__c</columns>
    <columns>Engagement_Duration_weeks__c</columns>
    <columns>Category__c</columns>
    <columns>Hours_Week__c</columns>
    <columns>Weekly_Talent_Rate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>